getDrunk/css/inputForm.css
/** BASIC SETTINGS **/

:root {
    --main-width: min(100em, 100vw);
    --main-width-popup: min(75em, 60vw);
}

body{
    font-size: 0.8em;
    position: absolute;
    width: 100%;
}

#body-main {
    text-align: center;
}

#body-add {
    text-align: left;
}

h1{
    font-size: 1.5em;
    color: var(--col-highlight);
    margin-top: 0;
    font-style: normal;
    font-weight: normal;
}



/** HEADER **/

.header {
    background-color: grey;
}



/** BASIC STRUCTURE **/

#main{
    width: var(--main-width);
    height: calc(100vh - 3.5em - 2em - 2em); /** 3.5em is the height of the header, 2em the padding **/
    margin: 0 auto;
    background-color: var(--col-background);
    padding: 2em;
    z-index: -1;
}

#wrapper{
    padding: 2em;
}

#left-column {
    width: 30%;
    height: 100%;
    float: left;
    margin: 0;
    padding-right: 2em;
}

#right-column {
    width: calc(70% - 2em);
    height: calc(100% - 2.17em); /** 2.17em = Height header **/
    float: left;
    margin: 0;
}

.footer {
    position: absolute;
    z-index: 10;
    top: 90vh;
    width: var(--main-width);
    text-align: center;
}




/** BUTTONS **/

.modify, .delete, .add {
    font-size: 0.8em;
    outline: none;
    border-radius: 3px;
    background-color: inherit;
    cursor: pointer;
    padding:0.3em;
    width: 4em;
    margin: 0em 0.2em;
}

.modify{
    border: var(--col-yellow) solid 1px;
    color: var(--col-yellow);
}

.delete{
    border: var(--col-red) solid 1px;
    color: var(--col-red);
}

.add{
    color: var(--col-green);
    border: var(--col-green) solid 1px;
}

.modify:disabled, .delete:disabled, .add:disabled {
    opacity: 0.2;
}

.btn-nav {
    display:inline;
    margin: 0.5em;
    border-radius: 3px;
    background-color: transparent;
    padding: 0.3em 0.5em;
    color: var(--col-secondary);
    border: var(--col-secondary) solid 1px;
    cursor: pointer;
}

#btn-nav-save {
    float: right;
    margin: 0;
}

.btn-close {
    top: 1em;
    right: 1em;
    position: absolute;
    display: block;
    width: 2em;
    height: auto;
    padding: 0;
    cursor: pointer;
}


/** LISTS **/

.list {
    margin: 2em 0em;
    overflow-y:scroll;
    height: calc(50vh - 1.5em - 1.5em - 6em);
}

.list table {
    margin: 0 auto;
    text-align: left;
    border-spacing: 0;
    border-collapse: collapse;
    border-bottom: 1px solid var(--col-primary) ;
}

.list td {
    border-top: 1px solid var(--col-primary) ;
    border-left: none;
    border-right: none;
    padding: 0.4em;
}

.list th {
    font-weight: bold;
    padding: 0.4em;
    position: sticky;
    top: 0;
    background-color: var(--col-background);
}



/** POPUPS **/

.popup{
    height: 50vh;
    width: calc(var(--main-width-popup) - 3em);
    margin-left: calc((100% - var(--main-width-popup)) / 2);
    margin-top: 25vh;
    display:none;
    position: absolute;
    top: 0;
    bottom: 0;
    background-color: var(--col-background);
    z-index: 1;
    border: 1px solid var(--col-primary);
    border-radius: 5px;
    padding: 1.5em;
}



/** FORM/SCROLL CONTROLS **/

input, textarea, select {
    width: 100%;
    box-sizing: border-box;
}

.list input:disabled, select:disabled {
    background-color: transparent;
    border: none;
    color: var(--col-primary);
    padding: 0;
    opacity: 1;
}

.list input, select {
    background-color: var(--col-primary);
    border: none;
    color: var(--col-background-dark);
    padding: 0.2em;
}

::-webkit-scrollbar{
    width:7px;
    background: rgba(000, 0, 0, 0.1);
}

::-webkit-scrollbar-thumb{
    width: 7px;
    height: 5px;
    border-radius: 10px;
    -webkit-box-shadow:inset 0 0 6px rgba(0,0,0,0.3);
    background:grey;
}




/** BAR DETAILS**/

.aboutBar {
    font-size: inherit;
    table-layout: fixed;
}

.aboutBar input, textarea {
    color: var(--col-primary);
    background: var(--col-background-dark);
    border: var(--col-background-dark);
    border-radius: 1px;
}

.aboutBar input {
    padding: 0.5em;
}

.aboutBar textarea {
    height: 20vh;
    padding: 0.5em 0.7em;
    font-family: 'Roboto', sans-serif;
}


/** DRINK MENU **/

#drink-menu-title {
    display: inline;
    float: left;
}

#drink-menu-table {
    width: 100%;
    border: none;
    font-size: inherit;
}

#drink-menu-table tbody {
    height: 10%; /** 2.17em = Height of header **/
    display: block;
}

#drink-menu-table td, th {
    border: none;
}

#drink-menu-table tr:nth-child(even) {
    background-color: #2A2A2A
}

#drink-menu-table .td-drink, .td-menu {
    width: 30%;
}

#drink-menu-table .td-menu {
    width: 20%;
}

#drink-menu-table .td-drink-type {
    width: 15%;
}

#drink-menu-table .td-volume, .td-price {
    width: 10%;
}

#drink-menu-table .td-submit {
    padding-left: 0;
    padding-right: 0;
    width: min-content;
}

